tests/codegen/fail/interface/struct/attr_unnamed_field.rs
use coasys_juniper::graphql_interface;

#[graphql_interface]
struct Character(i32);

fn main() {}
